<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="#4274d1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.instilive.lovely.AboutUsActivity">

    <TextView
        android:layout_marginTop="27sp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:id="@+id/about_name"
        android:text="Lovely"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_marginLeft="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/about_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#B2BABB"
            android:textSize="17sp"
            android:layout_below="@+id/about_name"
            android:id="@+id/about_version"
            android:text="@string/text_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="#fff"
            android:textSize="24sp"
            android:layout_below="@+id/about_version"
            android:id="@+id/about_version_number"
            android:text="@string/version_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="17sp"
            android:textColor="#B2BABB"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/about_version_number"
            android:id="@+id/about_jargon"
            android:text="Lovely is built totally using open source software and libraries."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="17sp"
            android:textColor="#B2BABB"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/about_jargon"
            android:id="@+id/about_patent"
            android:text="@string/product_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/ravi"
            android:clickable="true"
            android:textColor="#fff"
            android:textSize="24sp"
            android:text="@string/ravi_prakash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/bittu"
            android:clickable="true"
            android:textColor="#fff"
            android:textSize="24sp"
            android:text="@string/bittu_balram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/atul"
            android:clickable="true"
            android:textColor="#fff"
            android:textSize="24sp"
            android:text="@string/atul_sagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>
